js/styles.scss
@import "bootstrap.min";
@import "timeline";
@import "features/map/map";
@import "common";

$link-color: black;
$left-width: 350px;
$left-width-big-screen: 375px;
$trailing-timline-height: 50px;
$item-line-distance: 30px;

body {
	font-size: 112.5%;
	line-height: 1.6em;
}

.left-placeholder {
	width: $left-width;
	min-width: $left-width;
	height: 100%;
	background: $left-bg-color;
	padding: 2em;
	display: table-cell;

	@media (max-width: $mobile-screen) {
		display: none;
	}

	@media (min-width: $big-screen) {
		width: $left-width-big-screen;
		min-width: $left-width-big-screen;
	}
}

.left-desktop {
	width: $left-width;
	position: fixed;
	top: 0;
	left: 0;
	padding: 2em;

	@media (max-width: $mobile-screen) {
		display: none;
	}

	@media (min-width: $big-screen) {
		width: $left-width-big-screen;
	}
}

.left {
	h1,
	h2,
	h3,
	h4,
	h5,
	h6,
	.h1,
	.h2,
	.h3,
	.h4,
	.h5,
	.h6,
	p,
	span,
	body,
	a {
		color: #353535;
	}
}

.right {
	background-color: $right-bg-color;
	margin-left: $left-width;
	height: 100%;
	padding: 5em 4em 4em 4em;
	display: table-cell;
	@media (max-width: $mobile-screen) {
		padding: 1em;
		display: block;
		margin-left: 0;
		height: unset;
	}
	@media (max-width: $small-desktop-screen) {
		padding: 3em 1em 4em 1em;
	}

	@media (min-width: $big-screen) {
		padding: 5em 5em 4em 5em;
	}

	h1,
	h2,
	h3,
	h4,
	h5,
	h6,
	.h1,
	.h2,
	.h3,
	.h4,
	.h5,
	.h6,
	p,
	span,
	body,
	a {
		color: #404040;
	}
}

.btn {
	color: white !important;
}

/** Remove link styling **/

a {
	text-decoration: inherit;
}

.anchor-link{
	font-weight: 600;
}

/** Generic **/

.noselect {
	-webkit-touch-callout: none;
	/* iOS Safari */
	-webkit-user-select: none;
	/* Safari */
	-khtml-user-select: none;
	/* Konqueror HTML */
	-moz-user-select: none;
	/* Old versions of Firefox */
	-ms-user-select: none;
	/* Internet Explorer/Edge */
	user-select: none;
}

.skill-card {
	display: grid;

	.sub-title {
		margin-top: 0.5em;
		display: inline-block;
		margin-bottom: 0;
	}

	.card-icon {
		width: 25px;
	}

	.card-body {
		& > div {
			display: table-row;

			& > div {
				display: table-cell;
			}
		}
	}

	.icon-container {
		display: "table-cell";
		padding-right: 1.2em;
		line-height: 0;
	}
}

.skill-card-group {
	margin-top: $section-gap;
	@media (max-width: $mobile-screen) {
		padding-left: 1em;
		padding-right: 1em;
	}
}

.highlight-card {
	border: 1px solid rgba(0, 50, 50, 0.625);
}

.rows-cols-xxl-4 {
	> * {
		@media (min-width: $big-screen) {
			-webkit-box-flex: 0;
			-ms-flex: 0 0 25%;
			flex: 0 0 25%;
			max-width: 25%;
		}
	}
}

.back-end {
	background-color: $left-bg-color;
}

.front-end {
	background-color: $orange;
}

.deployment {
	background-color: $green;
}

.badge {
	color: white !important;
}

.card-subtitle {
	.badge-info {
		margin-top: 0.8em;
		font-size: 0.7em;
		line-height: 0.8em;
	}
}
.card-title {
	margin-bottom: 0.1em;
}

.card-text {
	font-size: 0.9em;
}

.intro-section {
	font-size: 1.1em;
	margin-top: 2em;
	margin-bottom: $section-gap;
	padding-left: 5em;
	padding-right: 5em;
	@media (max-width: $small-desktop-screen) {
		margin-top: 1em;
		padding-left: 2em;
		padding-right: 2em;
	}
	@media (max-width: $mobile-screen) {
		padding-left: 1em;
		padding-right: 1em;
	}
}

.project-card {
	margin-top: $section-gap;
	padding: 0;

	.card-subtitle {
		margin-top: 0.4em;
		margin-bottom: 1.5em;
	}

	@media (max-width: $mobile-screen) {
		margin-left: -1em;
		margin-right: -1em;
		border-radius: 0;
	}

	.mini-map {
		height: 200px;
		width: 350px;
		@media (max-width: $small-desktop-screen) {
			width: 100%;
			height: 200px;
		}
	}

	.mini-canvas-container {
		max-height: 350px;
		& > div {
			position: relative;
		}
		
	}

	.project-card-img {
		height: 200px;
		width: 350px;
		max-width: 350px;
		overflow: hidden;
		@media (max-width: $small-desktop-screen) {
			width: 100%;
			height: 200px;
			max-width: calc(100vw - 22em);
		}
		@media (max-width: $mobile-screen) {
			max-width: calc(100vw - 1em);
		}

	}

	.card-body {
		padding: 0;
		display: table;

		& > div {
			display: table-row;

			@media (max-width: $small-desktop-screen) {
				display: block;
			}

			& > div {
				display: table-cell;

				@media (max-width: $small-desktop-screen) {
					display: block;
				}
			}
		}
	}

	.card-content {
		z-index: 20;
		background-color: white;
		padding: 2em;
		position: relative;
		vertical-align: top;

		@media (max-width: $small-desktop-screen) {
			padding: 1em;
		}
	}

	.btn {
		.svg-inline--fa {
			margin-right: 0.4em;
		}
		margin-left: 0.5em;
		margin-right: 0.5em;
	}

	.lower-button-group {
		display: flex;
		justify-content: space-between;
		margin-top: 1.5em;

		@media (max-width: 1400px) {
			display: block;
			justify-content: unset;
			text-align: center;
			width: 100%;
			& > button,
			& > a {
				margin-bottom: 1em;
			}
		}
	}
}

.btn-primary {
	color: #fff;
	background-color: $orange;
	border-color: $orange;
}

.section-heading {
	margin-top: 2em;
	font-size: 2.2em;
	@media (max-width: $mobile-screen) {
		margin-left: 0.5em;
	}
}

.avatar {
	border-radius: 50%;
	width: 225px;
	height: 225px;
	background-repeat: no-repeat;
	background-size: cover;
	margin-bottom: 1em;
	margin-left: auto;
	margin-right: auto;
}

.name-heading {
	color: white !important;
	margin-top: 0.5em;
	display: inline-block;
	font-weight: 600;
}

.title-heading {
	margin-top: 0.5em;
}

.side-heading {
	margin-top: 4em;
	margin-bottom: 1.5em;
	display: inline-block;
	font-weight: 600;
}

.side-item-container {
	white-space: nowrap;
	margin-bottom: 1em;
	display: block;

	svg {
		margin-right: 0.7em;
	}

	a:hover {
		color: #282424;
	}
}

.top-mobile {
	@media (min-width: $mobile-screen) {
		display: none;
	}
	@media (max-width: $mobile-screen) {
		display: block;
		width: 100%;
		padding: 2em;
		background-color: $left-bg-color;
	}

	@media (min-width: $small-mobile-screen) and (max-width: $mobile-screen) {
		text-align: center;

		.avatar {
			width: 350px;
			height: 350px;
		}
	}
}

.mobile-only {
	@media (min-width: $mobile-screen) {
		display: none;
	}
}
.desktop-heading {
	text-align: center;
	@media (max-width: $mobile-screen) {
		display: none;
	}
}

.loading-container {
	& > div {
		width: 100%;
		height: 100%;
		display: table;
		text-align: center;
		& > div {
			vertical-align: middle;
			display: table-cell;
		}
	}
	.loader:after {
		background: #fbfbfb;
	}
}

